fix java 8 `setOf` incompatibility issue